--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -1,8 +1,9 @@
+@import "../_helper";
+@import "../index";
 .tui-dialog {
   background: white;
   position: fixed;
-  width: 10em;
-  height: 10em;
+  min-width: 20em;
   border-radius: 4px;
   top: 50%;
   left: 50%;
@@ -15,18 +16,32 @@
     background: fade_out(black, 0.5);
   }
   &-header {
+    font-size: 22px;
+    padding: 8px 16px;
+    border-bottom: 1px solid gray;
   }
   &-main {
+    min-height: 6em;
+    padding: 8px 16px;
   }
-  &-footer {}
+  &-footer {
+    border-top: 1px solid gray;
+    padding: 8px 16px;
+    display: flex;
+    justify-content: flex-end;
+  }
   &-close {
     position: absolute;
     bottom: 100%;
     left: 100%;
-    width: 2em;
-    height: 2em;
-    background: white;
+    width: 1.5em;
+    height: 1.5em;
+    background: $main-color;
     border-radius: 50%;
     transform: translate(-50%, 50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
   }
 }
