--- a/lib/icon/icon.scss
+++ b/lib/icon/icon.scss
@@ -1,4 +1,6 @@
 .tui-icon {
-  width: 1.4em;
-  height: 1.4em;
+  width: 0.8em;
+  height: 0.8em;
+  display: inline-block;
+  fill: currentColor;
 }
