--- a/lib/index.scss
+++ b/lib/index.scss
@@ -1,7 +1,19 @@
 [class^=tui-] {
-  box-sizing: border-box; font-size: 14px;
+  box-sizing: border-box;
   &::after,
-  &::before{
+  &::before {
     box-sizing: border-box;
+  }
+}
+button {
+  box-sizing: border-box;
+  height: 32px;
+  margin: 0 4px;
+  border-radius: 4px;
+  &:first-child {
+    margin-left: 0;
+  }
+  &:last-child {
+    margin-right: 0;
   }
 }
