dialog mask 层级问题  ReactDom.CreatePortal

--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -5,6 +5,7 @@
   position: fixed;
   min-width: 20em;
   border-radius: 4px;
+  z-index: 2;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
