--- a/lib/layout/layout.scss
+++ b/lib/layout/layout.scss
@@ -1,22 +1,19 @@
 @import "../helper";
 
 .tui-layout{
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
-  &.hasAside {
+  &-content{
+    flex-grow: 1;
+  }
+  & & {
+    flex-grow: 1;
+    flex-direction: row;
+  }
+  &-hasAside {
     flex-direction: row;
     .tui-layout{
       flex-direction: column;
     }
-  }
-  &-content{
-    flex-grow: 1;
-    border: 1px solid green;
-  }
-  & & {
-    flex-grow: 1;
-    border: 1px solid blue;
-    flex-direction: row;
   }
 }
