--- a/lib/scroll/scroll.scss
+++ b/lib/scroll/scroll.scss
@@ -1,13 +1,28 @@
-.tui-scroll{
+.tui-scroll {
   position: relative;
   overflow: hidden;
-  &-inner{
+  &-inner {
     overflow: auto;
-    border: 3px solid blue;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+  }
+  &-track {
+    width: 10px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+  }
+  &-bar {
+    height: 30px;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: 6px;
+    background: rgba(128, 128, 128, 0.8);
+    border-radius: 3px;
   }
 }
