--- a/example.scss
+++ b/example.scss
@@ -9,18 +9,17 @@ pre { font-family: "Fira Code Medium", Consolas, monospace}
 $padding: 16px;
 $main-color: #00ADB5;
 $border-color: #EEEEEE;
-
 .site-page {
   background: #ffffff;
   min-height: 100vh;
 }
-.site-main ￿{
+.site-main ￿ {
   padding-top: $padding;
 }
 .site-header {
   background: $border-color;
   padding: 8px 0;
-  .site-logo{
+  .site-logo {
     width: 5em;
     height: 5em;
     margin-left: $padding;
@@ -32,6 +31,20 @@ $border-color: #EEEEEE;
   background: #ffffff;
   margin-right: $padding;
   border-right: 1px solid $border-color;
+  &-title {
+    color: rgba(0, 0, 0, 0.35);
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: 500;
+    cursor: default;
+    height: 40px;
+    padding-left: $padding;
+    padding-bottom: 4px;
+    padding-top: 4px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;;
+  }
   h2 {
     padding: $padding;
     font-size: 18px;
@@ -39,14 +52,21 @@ $border-color: #EEEEEE;
   ul {
     min-width: 12em;
     > li {
-      a{
-        padding: 8px $padding;
+      a {
+        padding: 4px $padding*2;
         display: block;
-        color: #333;
-        &:hover{
+        color: rgba(0,0,0,0.65);
+        font-size: 14px;
+        height: 40px;
+        line-height: 22px;
+        font-weight: 400;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        &:hover {
           color: $main-color;
         }
-        &.active{
+        &.active {
           color: white;
           background: $main-color;
         }
@@ -54,7 +74,7 @@ $border-color: #EEEEEE;
     }
   }
 }
-.site-footer{
+.site-footer {
   text-align: center;
   font-size: 12px;
   color: #666;
