--- a/introduce/introduce.scss
+++ b/introduce/introduce.scss
@@ -1,4 +1,8 @@
-.button_demo_container {
+* {margin: 0;padding: 0;box-sizing: border-box;}
+*::after {box-sizing: border-box;}
+*::before {box-sizing: border-box;}
+
+.introduction {
   section {
     padding: 20px 20px 0 25px;
     max-width: 1200px;
@@ -17,19 +21,6 @@
       line-height: 22px;
       color: rgba(0,0,0,0.65);
       margin: 14px 0;
-    }
-  }
-  &_example {
-    max-width: 1200px;
-    margin: 20px auto;
-    .container {
-      padding: 40px 32px;
-      margin: 20px auto;
-      border: 1px solid rgba(0,0,0,0.15);
-      border-radius: 4px;
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
     }
   }
 }
