--- a/lib/icon/icon.scss
+++ b/lib/icon/icon.scss
@@ -1,6 +1,7 @@
 .tui-icon {
-  width: 3em;
-  height: 3em;
+  width: 2em;
+  height: 2em;
   display: inline-block;
   fill: currentColor;
+  margin-right: 12px;
 }
