--- a/lib/button/button.scss
+++ b/lib/button/button.scss
@@ -6,6 +6,7 @@
   line-height: 22px;
   transition: all 250ms;
   border-radius: 4px;
+  margin-right: 20px;
   &:focus {
     outline: none;
   }
@@ -25,6 +26,25 @@
     &:focus, &:hover{
       background: lighten($main-color, 10%);
       border-color: lighten($main-color, 10%);
+    }
+  }
+  &-dashed{
+    border-style: dashed;
+    border-color: rgba(0,0,0,0.15);
+    &:focus, &:hover{
+      outline: none;
+      color: #1890ff;
+      border-color: #1890ff;
+      z-index: 1;
+    }
+  }
+  &-danger {
+    color: #f5222d;
+    background: #f5f5f5;
+    &:focus,&:hover {
+      color: #f5222d;
+      background: #fff;
+      border-color: #f5222d;
     }
   }
 }
