button example add forbidden button

--- a/lib/button/button.scss
+++ b/lib/button/button.scss
@@ -47,4 +47,10 @@
       border-color: #f5222d;
     }
   }
+  &-forbidden {
+    color: rgba(0,0,0,0.25);
+    border-color: #d9d9d9;
+    background: #e6e6e6;
+    cursor: not-allowed;
+  }
 }
